k8s.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: $SLUG
  labels:
    app: $SLUG
spec:
  replicas: 1
  selector:
    matchLabels:
      app: $SLUG
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: $SLUG
    spec:
      containers:
        - name: $SLUG
          image: $AWS_ECR_URL/$SLUG:latest
          imagePullPolicy: Always
          livenessProbe:
            tcpSocket:
              port: $PORT
            initialDelaySeconds: 30
          readinessProbe:
            tcpSocket:
              port: $PORT
            initialDelaySeconds: 30
          resources:
            limits:
              memory: $MEMORY_LIMIT
            requests:
              memory: $MEMORY_REQUESTS
          ports:
            - containerPort: $PORT
              name: $SLUG
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: $SLUG-ingress
  namespace: $NAMESPACE
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/limit-connections: "500"
    nginx.ingress.kubernetes.io/limit-rps: "500"
    nginx.ingress.kubernetes.io/load-balance: ewma
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: $HOST
      http:
        paths:
          - backend:
              service:
                name: $SLUG
                port:
                  number: $PORT
            path: /$CONTEXT(/*)(.*)
            pathType: ImplementationSpecific
---
kind: Service
apiVersion: v1
metadata:
  name: $SLUG
spec:
  selector:
    app: $SLUG
  ports:
    - protocol: TCP
      port: $PORT
      targetPort: $PORT
